# manu-tracker

./: .gitignore  README.md  docker-compose.yml
.cursor/rules/: python.mdc  typescript-node.mdc
.github/workflows/: ci-manu-eye.yml  ci-manu-gen-backend.yml  ci-manu-gen-frontend.yml  ci-manu-orch.yml
manu-eye/: README.md  pyproject.toml
manu-eye/src/: camera.py  client.py  config.py  decoder.py  dedup.py  main.py  presence.py  tray_codes.py
manu-eye/tests/: test_client.py  test_decoder.py  test_decoder_policy.py  test_dedup.py  test_presence.py  test_tray_codes.py
manu-gen/backend/: .dockerignore  Dockerfile  package.json  tsconfig.json
manu-gen/backend/src/: app.ts  db.ts  index.ts
manu-gen/backend/src/features/analytics/: analytics.controller.ts  analytics.schema.ts  analytics.service.test.ts  analytics.service.ts
manu-gen/backend/src/features/events/: events.controller.test.ts  events.controller.ts  events.schema.ts  events.service.test.ts  events.service.ts
manu-gen/backend/src/features/eyes/: eyes.controller.test.ts  eyes.controller.ts  eyes.schema.ts  eyes.service.test.ts  eyes.service.ts
manu-gen/backend/src/features/orders/: orders.controller.test.ts  orders.controller.ts  orders.dashboard.test.ts  orders.schema.test.ts  orders.schema.ts  orders.service.test.ts  orders.service.ts
manu-gen/backend/src/shared/: datetime.ts  logger.ts  validation.ts
manu-gen/frontend/: .dockerignore  .env.example  Dockerfile  package.json  vite.config.ts
manu-gen/frontend/src/: App.tsx  main.tsx  test-utils.tsx
scripts/: clean-docker-db.sh  seed-fixtures.sh
(+77 files in other folders)
